Fixed Z-Index issue with overlay (+ cookie issue fixed)

--- a/src/app/pages/register/register.component.less
+++ b/src/app/pages/register/register.component.less
@@ -48,7 +48,7 @@
         position: absolute;
         inset: 0;
         margin: auto;
-        z-index: 1;
+        z-index: 0;
         padding: 30px;
 
         .title{
